--- a/index.html
+++ b/index.html
@@ -2,11 +2,54 @@
 <html>
     <head>
         <title>O caçador de demónios</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">    
+        <link rel="stylesheet" type="text/css" href="css/Dante.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <img src="Ima">
-            <h1></h1>
+            <img src="Imagens/ddd2527c26b0fb551a9ddb3b8338dca5.jpg">
+            <h1 class="Titulo">Dante</h1>
         </header>
+        <main>
+            <h2>Sobre</h2>
+            <p class="about">
+                Dante é um mercenário e caçador de demónios filho de Sparda, 
+                um demónio de grande poder, e Eva, uma humana, por esse memo motivo 
+                Dante é um ser híbrido sendo ele um meio demónio meio humano, sendo essa 
+                a razão de ter cabelos brancos/prateados.Devido aos poderes demoniacos herdados 
+                pelo pai Dante tem a possibilidade de usar o Devil Triger.
+            </p>
+            <img src="Imagens/0ac2c8572151a26344d96542a673fbfb.png">
+            <p class="caption">Devil Triger do Dante</p>
+            <h2>Traços de personalidade</h2>
+            <ol>
+                <li>Bem humorado</li>
+                <li>Justo</li>
+                <li>Leal</li>
+                <li>Solitário</li>
+            </ol>
+            <h2>Amigos</h2>
+            <p class = "about2">
+                Apesar de Dante gostar de fazer o seu trabalho de matar demonios sozinho 
+                ao longo da franquia de jogos ele vai fazendo alguns amigos, entre eles:
+            </p>
+            <ul>
+                <li>
+                    <a href ="https://devilmaycry.fandom.com/wiki/Trish" target="_blank">Trish</a>
+                </li>
+                <li>
+                    <a href ="https://devilmaycry.fandom.com/wiki/Lady" target="_blank">Lady</a>
+                </li>
+                <li>
+                    <a href ="https://devilmaycry.fandom.com/wiki/Nero" target="_blank">Nero</a>
+                </li>
+            </ul>
+        </main>
+        <footer>
+            <p class="Info">Página criada no âmbito da cadeira de programação e animação web - 2021&copy;</p>
+        </footer>
     </body>
 </html>
