--- a/index.html
+++ b/index.html
@@ -38,13 +38,34 @@
             </p>
             <ul>
                 <li>
-                    <a href ="https://devilmaycry.fandom.com/wiki/Trish" target="_blank">Trish</a>
+                    <div class="container">
+                        <img src="Imagens/trish.jpg" >
+                            <div class="middle">
+                                <div >
+                                    <a href ="https://devilmaycry.fandom.com/wiki/Trish" target="_blank">Trish</a>
+                                </div>
+                            </div>
+                    <div>
                 </li>
                 <li>
-                    <a href ="https://devilmaycry.fandom.com/wiki/Lady" target="_blank">Lady</a>
+                    <div class="container">
+                    <img src="Imagens/Lady.png" >
+                        <div class="middle">
+                            <div>
+                                <a href ="https://devilmaycry.fandom.com/wiki/Lady" target="_blank">Lady</a>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <a href ="https://devilmaycry.fandom.com/wiki/Nero" target="_blank">Nero</a>
+                    <div class="container">
+                        <img src="Imagens/nero.jfif" >
+                            <div class="middle">
+                                <div >
+                                    <a href ="https://devilmaycry.fandom.com/wiki/Nero" target="_blank">Nero</a>
+                                </div>
+                            </div>
+                    </div>
                 </li>
             </ul>
         </main>
